tests/baselines/reference/FunctionPropertyAssignments4_es6.errors.txt
FunctionPropertyAssignments4_es6.ts(1,13): error TS1003: Identifier expected.


==== FunctionPropertyAssignments4_es6.ts (1 errors) ====
    var v = { * }
                ~
!!! error TS1003: Identifier expected.